# projectbox

./: .gitignore  README.md  meson.build
config/meson-info/: meson-info.json
config/meson-logs/: meson-log.txt
doc/: Doxyfile.in  meson.build
src/: meson.build
src/bild/meson-logs/: meson-log.txt
src/project/: main.cpp  meson.build
src/project/task 2/: vec.h
src/project/task 3/: Source.cpp
src/project/task_10/: meson.build  meson.build.save  vec_rotation.h
src/project/task_2/: main.cpp  meson.build
src/project/task_3/: Source.h  meson.build
src/project/task_4/: matrix.h  meson.build  stream_guard.h
src/project/task_5/: iterator.h  merge_sort.h  meson.build  user_id.h
src/project/task_8/: main.cpp  meson.build  sort_thread.h
src/test/: meson.build
src/test/task 3/: Source_test.cpp
src/test/task_10/: .vec_rotation_test.cpp.swo  .vec_rotation_test.cpp.swp  meson.build  vec_rotation_test.cpp
src/test/task_3/: Source_test.cpp  meson.build
src/test/task_4/: meson.build  symmetric_test.cpp  where_test.cpp
